--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "firebase": "^4.6.2",
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.6",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.4",
     "vuex": "^3.0.1"
